--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ family=Reenie+Beanie:regular"
       rel="stylesheet"
       type="text/css"
     />
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
     <!--font awesome-->
     <link
