updated about me

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@ family=Reenie+Beanie:regular"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower"
+      rel="stylesheet"
+    />
 
     <!--font awesome-->
     <link
@@ -74,13 +77,15 @@ family=Reenie+Beanie:regular"
               order to improve optimization. I am very curious about nex-gen
               sequencing, and the role it plays in precision medicine. Currently
               you can find me hitting the books, as I am beginning a Masters of
-              Bioinformatics program in the Fall of 2019 at the Johns Hopkins University.
+              Bioinformatics program in the Fall of 2019 at the Johns Hopkins
+              University.
             </p>
           </div>
 
           <div class="col l4 m4 s1">
             <img
               id="profilePic"
+              class="responsive-img circular"
               src="app/style/images/profile.jpg"
               alt="profile picture"
             />
@@ -88,17 +93,17 @@ family=Reenie+Beanie:regular"
 
           <div class="col l4 m4 s1">
             <div class="descriptionText">
-              <h2>Experience</h2>
+              <h2>Education</h2>
               <p>
-                Bacheolors of Science in Biology from the State University of
+                <strong>Bachelors of Science in Biology </strong> from the State University of
                 New York at Geneseo
               </p>
               <p>
-                Masters of Bioinformatics Candidate at the Johns Hopkins
+                <strong>Masters of Bioinformatics Candidate </strong> at the Johns Hopkins
                 University
               </p>
               <p>
-                Technologies: HTML, CSS, Bootstrap, JQuery, AJAX, Node.js,
+                <strong>Technologies</strong>: HTML, CSS, Bootstrap, JQuery, AJAX, Node.js,
                 React, JavaScript, and performing statistical analysis using R
               </p>
             </div>
